--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
+  "homepage": "https://Yefi-Yulia.github.io/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
