--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "homepage": "https://Yefi-Yulia.github.io/",
+  "homepage": "https://Yefi-Yulia.github.io/firstproject",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy" : "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
